--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body{
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 5vh;
     z-index: 9999;
     padding: 0px;
