--- a/styles.css
+++ b/styles.css
@@ -113,6 +113,7 @@ body{
     width: 100%;
     border: 1px solid rgba(50, 50, 50, 0.5);
     box-shadow: 10px 10px 5px rgba(50, 50, 50, 0.5);
+    border-radius: 8px;
   }
   
   .grid-link {
